pre-emptively awesomize error messages before markstory can awesomize 2.0 error messages

--- a/libs/templates/misc/less/preboot.less
+++ b/libs/templates/misc/less/preboot.less
@@ -188,3 +188,9 @@
     background-image: linear-gradient(@startColor, color-stop(@midColor, @colorStop), @endColor);
   }
 }
+// Gradient Bar Colors for buttons and allerts
+.gradientBar(@primaryColor, @secondaryColor) {
+  #gradient > .vertical(@primaryColor, @secondaryColor);
+  border-color: @secondaryColor @secondaryColor darken(@secondaryColor, 15%);
+  border-color: rgba(0,0,0,.1) rgba(0,0,0,.1) fadein(rgba(0,0,0,.1), 15%);
+}
