--- a/libs/templates/misc/less/10_notifications.less
+++ b/libs/templates/misc/less/10_notifications.less
@@ -13,27 +13,38 @@
   margin: @baseline;
   padding: 8px 15px;
   color: #fff;
-  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
-  border-bottom: 1px solid rgba(0,0,0,.25);
+  text-shadow: none;
+  border: 1px solid rgba(0,0,0,.25);
   .border-radius(4px);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  em {
+    color: #000;
+  }
   p {
     color: #fff;
     margin-bottom: 0;
     + p {
       margin-top: 5px;
     }
+    &.notice {
+      color: #000;
+      em {
+        color: #333;
+      }
+    }
   }
   &.error {
-    background-color: lighten(@red, 25%);
+    .gradientBar(#ee5f5b, #c43c35);
   }
   &.notice {
-    background-color: lighten(@yellow, 15%);
+    .gradientBar(#fceec1, #eedc94);
+    color: #000;
   }
   &.success {
-    background-color: lighten(@green, 15%);
+    .gradientBar(#62c462, #57a957);
   }
   &.information {
-    background-color: lighten(@blue, 15%);
+    .gradientBar(#5bc0de, #339bb9);
   }
   a.close {
     float: right;
